--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -22,3 +22,10 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+tsconfig.json
+vite.config.ts
+tsconfig.node.json
+.eslintrc.cjs
+/frontend/src/vite-env.d.ts
+
