--- a/backend/package.json
+++ b/backend/package.json
@@ -25,6 +25,7 @@
     "@types/express": "^4.17.21",
     "@types/multer": "^1.4.11",
     "@types/node": "^20.11.25",
+    "@types/uuid": "^9.0.8",
     "@types/validator": "^13.11.9",
     "nodemon": "^3.1.0",
     "typescript": "^5.4.2"
