.gitignore file changed

--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -27,8 +27,8 @@ dist
 *.sw?
 
 #tsconfig.json
-vite.config.ts
-tsconfig.node.json
+#vite.config.ts
+#tsconfig.node.json
 .eslintrc.cjs
 frontend/src/vite-env.d.ts
 
